# xenomai-ethercat

./: Makefile.am  Makefile.in  configure.ac  ethercat.spec  ethercat.spec.in
devices/: Kbuild.in  Makefile.am  Makefile.in
devices/e1000/: Makefile.in
devices/e1000e/: Makefile.in
devices/igb/: Kbuild.in  Makefile.am  Makefile.in  e1000_82575-4.14-ethercat.c  e1000_82575-4.14-orig.c  e1000_82575-4.9-ethercat.c  e1000_i210-4.9-ethercat.c  e1000_mbx-4.14-ethercat.c  e1000_mbx-4.14-orig.c  igb-4.14-ethercat.h  igb-4.19-ethercat.h  igb-4.9-ethercat.h  igb_ethtool-4.14-ethercat.c  igb_main-4.14-ethercat.c  igb_main-4.19-ethercat.c  igb_main-4.9-ethercat.c
examples/: Makefile.in
examples/dc_user/: Makefile.in
examples/mini/: Makefile.in  mini.c
examples/rtai/: Makefile.in
examples/rtai_rtdm/: Makefile.in
examples/rtai_rtdm_dc/: Makefile.in
examples/tty/: Makefile.in
examples/user/: Makefile.in
examples/xenomai/: Makefile.am  Makefile.in  main.c
examples/xenomai_posix/: Makefile.am  Makefile.in  main.c
include/: Makefile.in
lib/: Makefile.am  Makefile.in  common.c  ioctl.h  master.c  slave_config.c
m4/: Makefile.in
master/: Kbuild.in  Makefile.am  Makefile.in  device.h  fsm_slave_config.c  fsm_soe.c  globals.h  ioctl.c  ioctl.h  master.c  master.h  module.c  rtdm.c
script/: Makefile.in  ethercat.conf  ethercatctl.in
script/init.d/: Makefile.in  ethercat.in
script/sysconfig/: Makefile.in  ethercat
tool/: Makefile.in
tty/: Makefile.in
