#------------------------------------------------------------------------------
#
#  $Id$
#
#  Copyright (C) 2006-2008  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#  ---
#
#  The license mentioned above concerns the source code only. Using the
#  EtherCAT technology and brand is only permitted in compliance with the
#  industrial property and similar rights of Beckhoff Automation GmbH.
#
#------------------------------------------------------------------------------

EXTRA_DIST = \
	Kbuild.in \
	e1000_82575-4.9-ethercat.c \
	e1000_82575-4.9-ethercat.h \
	e1000_82575-4.9-orig.c \
	e1000_82575-4.9-orig.h \
	e1000_defines-4.9-ethercat.h \
	e1000_defines-4.9-orig.h \
	e1000_hw-4.9-ethercat.h \
	e1000_hw-4.9-orig.h \
	e1000_i210-4.9-ethercat.c \
	e1000_i210-4.9-ethercat.h \
	e1000_i210-4.9-orig.c \
	e1000_i210-4.9-orig.h \
	e1000_mac-4.9-ethercat.c \
	e1000_mac-4.9-ethercat.h \
	e1000_mac-4.9-orig.c \
	e1000_mac-4.9-orig.h \
	e1000_mbx-4.9-ethercat.c \
	e1000_mbx-4.9-ethercat.h \
	e1000_mbx-4.9-orig.c \
	e1000_mbx-4.9-orig.h \
	e1000_nvm-4.9-ethercat.c \
	e1000_nvm-4.9-ethercat.h \
	e1000_nvm-4.9-orig.c \
	e1000_nvm-4.9-orig.h \
	e1000_phy-4.9-ethercat.c \
	e1000_phy-4.9-ethercat.h \
	e1000_phy-4.9-orig.c \
	e1000_phy-4.9-orig.h \
	e1000_regs-4.9-ethercat.h \
	e1000_regs-4.9-orig.h \
	igb-4.9-ethercat.h \
	igb-4.9-orig.h \
	igb_ethtool-4.9-ethercat.c \
	igb_ethtool-4.9-orig.c \
	igb_main-4.9-ethercat.c \
	igb_main-4.9-orig.c \
	igb_ptp-4.9-ethercat.c \
	igb_ptp-4.9-orig.c \
	igb_hwmon-4.9-ethercat.c \
	igb_hwmon-4.9-orig.c \
	e1000_82575-4.14-ethercat.c \
	e1000_82575-4.14-ethercat.h \
	e1000_82575-4.14-orig.c \
	e1000_82575-4.14-orig.h \
	e1000_defines-4.14-ethercat.h \
	e1000_defines-4.14-orig.h \
	e1000_hw-4.14-ethercat.h \
	e1000_hw-4.14-orig.h \
	e1000_i210-4.14-ethercat.c \
	e1000_i210-4.14-ethercat.h \
	e1000_i210-4.14-orig.c \
	e1000_i210-4.14-orig.h \
	e1000_mac-4.14-ethercat.c \
	e1000_mac-4.14-ethercat.h \
	e1000_mac-4.14-orig.c \
	e1000_mac-4.14-orig.h \
	e1000_mbx-4.14-ethercat.c \
	e1000_mbx-4.14-ethercat.h \
	e1000_mbx-4.14-orig.c \
	e1000_mbx-4.14-orig.h \
	e1000_nvm-4.14-ethercat.c \
	e1000_nvm-4.14-ethercat.h \
	e1000_nvm-4.14-orig.c \
	e1000_nvm-4.14-orig.h \
	e1000_phy-4.14-ethercat.c \
	e1000_phy-4.14-ethercat.h \
	e1000_phy-4.14-orig.c \
	e1000_phy-4.14-orig.h \
	e1000_regs-4.14-ethercat.h \
	e1000_regs-4.14-orig.h \
	igb-4.14-ethercat.h \
	igb-4.14-orig.h \
	igb_ethtool-4.14-ethercat.c \
	igb_ethtool-4.14-orig.c \
	igb_main-4.14-ethercat.c \
	igb_main-4.14-orig.c \
	igb_ptp-4.14-ethercat.c \
	igb_ptp-4.14-orig.c \
	igb_hwmon-4.14-ethercat.c \
	igb_hwmon-4.14-orig.c \
	e1000_82575-4.19-ethercat.c \
	e1000_82575-4.19-ethercat.h \
	e1000_82575-4.19-orig.c \
	e1000_82575-4.19-orig.h \
	e1000_defines-4.19-ethercat.h \
	e1000_defines-4.19-orig.h \
	e1000_hw-4.19-ethercat.h \
	e1000_hw-4.19-orig.h \
	e1000_i210-4.19-ethercat.c \
	e1000_i210-4.19-ethercat.h \
	e1000_i210-4.19-orig.c \
	e1000_i210-4.19-orig.h \
	e1000_mac-4.19-ethercat.c \
	e1000_mac-4.19-ethercat.h \
	e1000_mac-4.19-orig.c \
	e1000_mac-4.19-orig.h \
	e1000_mbx-4.19-ethercat.c \
	e1000_mbx-4.19-ethercat.h \
	e1000_mbx-4.19-orig.c \
	e1000_mbx-4.19-orig.h \
	e1000_nvm-4.19-ethercat.c \
	e1000_nvm-4.19-ethercat.h \
	e1000_nvm-4.19-orig.c \
	e1000_nvm-4.19-orig.h \
	e1000_phy-4.19-ethercat.c \
	e1000_phy-4.19-ethercat.h \
	e1000_phy-4.19-orig.c \
	e1000_phy-4.19-orig.h \
	e1000_regs-4.19-ethercat.h \
	e1000_regs-4.19-orig.h \
	igb-4.19-ethercat.h \
	igb-4.19-orig.h \
	igb_ethtool-4.19-ethercat.c \
	igb_ethtool-4.19-orig.c \
	igb_hwmon-4.19-ethercat.c \
	igb_hwmon-4.19-orig.c \
	igb_main-4.19-ethercat.c \
	igb_main-4.19-orig.c \
	igb_ptp-4.19-ethercat.c \
	igb_ptp-4.19-orig.c

BUILT_SOURCES = \
	Kbuild

modules:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" modules

modules_install:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" \
		INSTALL_MOD_DIR="$(INSTALL_MOD_DIR)" modules_install

clean-local:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" clean

#------------------------------------------------------------------------------
